[tool.poetry]
name = "pyprpnet"
version = "0.2.0"
description = "PyPRPNet is a library to control all aspects of the PRPNet client (https://prpnet.primegrid.com)"
authors = ["Michael John <michael.john@gmx.at>"]
license = "MIT"
readme = "README.md"
include = ["run-prp.py"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
py7zr = "^0.20.6"
psutil = "^5.9.5"
natsort = "^8.4.0"

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["E501, F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
homepage = "https://github.com/amstelchen/PyPRPNet"
repository = "https://github.com/amstelchen/PyPRPNet"
documentation = "https://github.com/amstelchen/PyPRPNet"
